Bug 716059 - Labels should be right aligned in bug view r=glob

--- a/skins/custom/global.css
+++ b/skins/custom/global.css
@@ -30,10 +30,6 @@ pre {
     font-size: medium;
 }
 
-.field_label {
-    text-align: left;
-}
-
 #attachment_table {
     width: 50em;
 }
